Updated model and feedback feature

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <li><a href="{{ url_for('main') }}">Main page</a></li>
     <li><a href="{{ url_for('upload') }}">Upload</a></li>
     <li><a href="{{ url_for('result') }}">Result</a></li>
+    <li><a href="{{ url_for('feedbacksummary') }}">Feedback Summary</a></li>
   </ul>
 </nav>
 <section class="content">
