--- a/app/templates/main_better.html
+++ b/app/templates/main_better.html
@@ -86,5 +86,10 @@
     Similar to what we mentioned above, under the assumptions that a. The usage of this model is lawful b. The model is mature enough to successfully detect more subtle emotions, then this model will help optimize people’s experience regarding many products and thus improve quality of life, which can make the world an overall better place.
   </p>
 
-
+  <h2>Team member from Group (BGS)</h2>
+  <ul>
+    <li><a class = "name" href="https://github.com/jqlaura">Jiaqi Li</a2></li>
+    <li><a class = "name" href="https://github.com/JadenWSR">Shurui Wang</a2></li>
+    <li><a class = "name" href="https://github.com/leozhang233">Yi Zhang</a2></li>
+  </ul>
 {% endblock %}
