--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -10,19 +10,35 @@
         <label for="message">Your feedback: </label><br>
         <input name="message">
         <br>
-        <label for="message">Your name or handle: </label><br>
+        <label for="handle">Your name or handle: </label><br>
         <input name="handle">
         <br>
         <input type="submit" value="Submit form">
     </form>
   </center>
-
+  <br /> 
   {% if thanks %}
-   Thank you for submitting feedback!
+  <center>
+   Thank you for submitting feedback! To view our feedback summary, click here:
+   <form action="{{ url_for('feedbacksummary') }}">
+    <button class = "button1" type="submit">Summary</button>
+   </form>
+    <br /> 
+   Thank you for using our Webapp! To startover, click here:
+      <form action="{{ url_for('upload') }}">
+        <button class = "button" type="submit">Start Again!</button>
+       </form>
+    </center>
   {% endif %}
 
   {% if error %}
-  <br>Sorry, we are unable to upload your feedback. Please check your internet connection.
+  <center><br>Sorry, we are unable to upload your feedback. Please try again.<br /> 
+  <br /> 
+  Thank you for using our Webapp! To startover, click here:
+    <form action="{{ url_for('upload') }}">
+      <button class = "button" type="submit">Start Again!</button>
+     </form>
+  </center>
   {% endif %}
 
 
