--- a/app/templates/thanks.html
+++ b/app/templates/thanks.html
@@ -2,4 +2,9 @@
 
 {% block header %}
   <h1>{% block title %}Thank you for using our Webapp!{% endblock %}</h1>
+  <center>To startover, click here:
+  <form action="{{ url_for('upload') }}">
+    <button class = "button" type="submit">Start Again!</button>
+  </form>
+  </center>
 {% endblock %}
