Fixed feedback feature
Added a line to avoid problems caused by single quote by doubling them.

--- a/app/templates/main_better.html
+++ b/app/templates/main_better.html
@@ -88,8 +88,8 @@
 
   <h2>Team member from Group (BGS)</h2>
   <ul>
-    <li><a class = "name" href="https://github.com/jqlaura">Jiaqi Li</a2></li>
-    <li><a class = "name" href="https://github.com/JadenWSR">Shurui Wang</a2></li>
-    <li><a class = "name" href="https://github.com/leozhang233">Yi Zhang</a2></li>
+    <li><a class = "name" href="https://github.com/jqlaura">Jiaqi Li</a></li>
+    <li><a class = "name" href="https://github.com/JadenWSR">Shurui Wang</a></li>
+    <li><a class = "name" href="https://github.com/leozhang233">Yi Zhang</a></li>
   </ul>
 {% endblock %}
