--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -31,6 +31,8 @@
     {% endif %}
     .<br>
     <img src="{{image}}" alt="User Image" style="width:300px;height:250px">
+    <br><br>
+    <img src="{{image1}}" alt="Detected Image" style="width:300px;height:250px">
   {% endif %}
 
   <br><br>
