--- a/app/templates/quote.html
+++ b/app/templates/quote.html
@@ -13,5 +13,9 @@
             <button class = "button" type="submit">Start Again!</button>
           </form>
           </center>
+          <br><br><br>
+          The quote above was scraped from one of the world's largest quotation website, 
+          <a class = "name" href="https://www.brainyquote.com/">BrainyQuote.</a><br>
       {% endif %}
+
 {% endblock %}
